[gd_scene load_steps=13 format=3 uid="uid://52n7o6qni216"]

[ext_resource type="Script" uid="uid://bhomttdvb7f0u" path="res://Scripts/battle.gd" id="1_1otgo"]
[ext_resource type="PackedScene" uid="uid://c45x22ntd6o40" path="res://Scenes/end_turn_button.tscn" id="2_f6xt6"]
[ext_resource type="Texture2D" uid="uid://7yaxe7knw6jj" path="res://art/Roland.png" id="2_pd5xk"]
[ext_resource type="Texture2D" uid="uid://cfgoyikadny2w" path="res://art/Tiphereth.png" id="3_f6xt6"]
[ext_resource type="PackedScene" uid="uid://5d66itewyv70" path="res://Scenes/card.tscn" id="4_ww2ai"]
[ext_resource type="Script" uid="uid://cmkq8k0xqhkmb" path="res://Scripts/enemy.gd" id="5_f6xt6"]
[ext_resource type="Script" uid="uid://lfny7veyggxc" path="res://Scripts/card_hand.gd" id="6_f6xt6"]
[ext_resource type="Script" uid="uid://b6o5mjhlkliym" path="res://Scenes/add_card.gd" id="8_k7mbx"]
[ext_resource type="PackedScene" uid="uid://brq66ynmavfxc" path="res://Scenes/rewards.tscn" id="8_qeyqd"]
[ext_resource type="Script" uid="uid://d4gxle5jt6crt" path="res://Scripts/rewards.gd" id="9_qeyqd"]

[sub_resource type="SpriteFrames" id="SpriteFrames_onrkg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_pd5xk")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_i431l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_f6xt6")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Battle" type="Node2D" node_paths=PackedStringArray("light_display")]
script = ExtResource("1_1otgo")
light_display = NodePath("Light")

[node name="End Turn Button" parent="." instance=ExtResource("2_f6xt6")]
position = Vector2(1015, 595)

[node name="Player" type="AnimatedSprite2D" parent="."]
position = Vector2(248, 568)
sprite_frames = SubResource("SpriteFrames_onrkg")
flip_h = true

[node name="PlayerHP" type="Label" parent="Player"]
anchors_preset = -1
anchor_left = -0.406
anchor_top = -0.578
anchor_right = 4.531
anchor_bottom = 0.891
offset_left = 71.936
offset_top = 103.936
offset_right = -1063.94
offset_bottom = -625.192
text = "Health"
metadata/_edit_use_anchors_ = true

[node name="PlayerShield" type="Label" parent="Player"]
anchors_preset = -1
anchor_left = -0.406
anchor_top = -0.578
anchor_right = 4.531
anchor_bottom = 0.891
offset_left = 71.936
offset_top = 79.936
offset_right = -1063.94
offset_bottom = -649.192
text = "Shield"
metadata/_edit_use_anchors_ = true

[node name="Enemy" type="AnimatedSprite2D" parent="."]
position = Vector2(992, 288)
sprite_frames = SubResource("SpriteFrames_i431l")
script = ExtResource("5_f6xt6")

[node name="EnemyHP" type="Label" parent="Enemy"]
anchors_preset = -1
anchor_left = 5.37551
anchor_top = -15.9972
anchor_right = 10.2188
anchor_bottom = -14.4794
offset_left = -1424.13
offset_top = 7998.58
offset_right = -2560.0
offset_bottom = 7269.45
text = "Health"
metadata/_edit_use_anchors_ = true

[node name="Light" type="Label" parent="."]
offset_left = 368.0
offset_top = 592.0
offset_right = 464.0
offset_bottom = 632.0
text = "Light:"

[node name="CardHand" type="Node" parent="."]
script = ExtResource("6_f6xt6")
card_scene = ExtResource("4_ww2ai")

[node name="AddCard" type="Button" parent="."]
offset_left = 256.0
offset_top = 736.0
offset_right = 336.0
offset_bottom = 760.0
script = ExtResource("8_k7mbx")

[node name="Rewards" parent="." instance=ExtResource("8_qeyqd")]
visible = false
script = ExtResource("9_qeyqd")

[connection signal="enemy_dead" from="." to="Rewards" method="_on_battle_enemy_dead"]
[connection signal="enemy_dead" from="." to="AddCard" method="_on_battle_enemy_dead"]
[connection signal="end_player_turn" from="End Turn Button" to="." method="_on_player_end_turn"]
[connection signal="end_player_turn" from="End Turn Button" to="Enemy" method="_on_end_turn_button_end_player_turn"]
[connection signal="end_player_turn" from="End Turn Button" to="CardHand" method="_on_end_turn_button_end_player_turn"]
[connection signal="mouse_entered" from="End Turn Button" to="End Turn Button" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="End Turn Button" to="End Turn Button" method="_on_mouse_exited"]
[connection signal="enemy_attack" from="Enemy" to="." method="_on_enemy_enemy_attack"]
[connection signal="pressed" from="AddCard" to="CardHand" method="_on_add_card_pressed"]
